--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./youtubeFavicon.png" />
+    <link rel="icon" href="./assets/images/playMe.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Youtube Clone Made By vivek Patel" />
-    <link rel="youtube-icon" href="./youtubeFavicon.png" />
+    <meta name="description" content="PlayMe Video Player by Vivek Patel" />
+<!--    <link rel="" href="assets/images/playMe.png" />-->
 
     <link
       rel="stylesheet"
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <title>Youtube</title>
+    <title>Play me</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
