--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./assets/images/playMe.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="PlayMe Video Player by Vivek Patel" />
-<!--    <link rel="" href="assets/images/playMe.png" />-->
+    <link rel="icon" href="./playMe.png" type="image/x-icon" />
 
     <link
       rel="stylesheet"
